--- a/phoenix-chat-frontend/package.json
+++ b/phoenix-chat-frontend/package.json
@@ -11,17 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^6.x",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "prr": "^1.0.1",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
-  },  
+  },
   "babel": {
     "presets": [
       "es2015",
